# Buckshot-Roulette-Expectiminimax

./: CMakeLists.txt  GameState.cpp  GameState.hpp  README.md  main.cpp
src/: Enums.hpp  GameState.cpp  GameState.hpp  main.cpp
tests/: CMakeLists.txt  SimpleTest.cpp
